airflow_home/logs/postgres_pipeline/populate_customers_orders_table/2023-05-05T01:28:32.799438+00:00/1.log
[2023-05-05 01:28:44,555] {taskinstance.py:1032} INFO - Dependencies all met for <TaskInstance: postgres_pipeline.populate_customers_orders_table manual__2023-05-05T01:28:32.799438+00:00 [queued]>
[2023-05-05 01:28:44,566] {taskinstance.py:1032} INFO - Dependencies all met for <TaskInstance: postgres_pipeline.populate_customers_orders_table manual__2023-05-05T01:28:32.799438+00:00 [queued]>
[2023-05-05 01:28:44,567] {taskinstance.py:1238} INFO - 
--------------------------------------------------------------------------------
[2023-05-05 01:28:44,567] {taskinstance.py:1239} INFO - Starting attempt 1 of 2
[2023-05-05 01:28:44,568] {taskinstance.py:1240} INFO - 
--------------------------------------------------------------------------------
[2023-05-05 01:28:44,579] {taskinstance.py:1259} INFO - Executing <Task(PostgresOperator): populate_customers_orders_table> on 2023-05-05 01:28:32.799438+00:00
[2023-05-05 01:28:44,582] {standard_task_runner.py:52} INFO - Started process 4747 to run task
[2023-05-05 01:28:44,586] {standard_task_runner.py:76} INFO - Running: ['***', 'tasks', 'run', 'postgres_pipeline', 'populate_customers_orders_table', 'manual__2023-05-05T01:28:32.799438+00:00', '--job-id', '95', '--raw', '--subdir', 'DAGS_FOLDER/load_from_postgres.py', '--cfg-path', '/tmp/tmpk1wm1guq', '--error-file', '/tmp/tmp2yhpaunz']
[2023-05-05 01:28:44,587] {standard_task_runner.py:77} INFO - Job 95: Subtask populate_customers_orders_table
[2023-05-05 01:28:44,658] {logging_mixin.py:109} INFO - Running <TaskInstance: postgres_pipeline.populate_customers_orders_table manual__2023-05-05T01:28:32.799438+00:00 [running]> on host ebd7ac88a2d5
[2023-05-05 01:28:44,689] {logging_mixin.py:109} WARNING - /usr/local/lib/python3.7/site-packages/***/models/xcom.py:323 SAWarning: TypeDecorator UtcDateTime(timezone=True) will not produce a cache key because the ``cache_ok`` attribute is not set to True.  This can have significant performance implications including some performance degradations in comparison to prior SQLAlchemy versions.  Set this attribute to True if this type object's state is safe to use in a cache key, or False to disable this warning. (Background on this error at: https://sqlalche.me/e/14/cprf)
[2023-05-05 01:28:44,707] {logging_mixin.py:109} WARNING - /usr/local/lib/python3.7/site-packages/***/models/renderedtifields.py:126 SAWarning: TypeDecorator UtcDateTime(timezone=True) will not produce a cache key because the ``cache_ok`` attribute is not set to True.  This can have significant performance implications including some performance degradations in comparison to prior SQLAlchemy versions.  Set this attribute to True if this type object's state is safe to use in a cache key, or False to disable this warning. (Background on this error at: https://sqlalche.me/e/14/cprf)
[2023-05-05 01:28:44,715] {logging_mixin.py:109} WARNING - /usr/local/lib/python3.7/site-packages/***/models/renderedtifields.py:162 SAWarning: Coercing Subquery object into a select() for use in IN(); please pass a select() construct explicitly
[2023-05-05 01:28:44,728] {logging_mixin.py:109} WARNING - /usr/local/lib/python3.7/site-packages/***/models/renderedtifields.py:163 SAWarning: TypeDecorator UtcDateTime(timezone=True) will not produce a cache key because the ``cache_ok`` attribute is not set to True.  This can have significant performance implications including some performance degradations in comparison to prior SQLAlchemy versions.  Set this attribute to True if this type object's state is safe to use in a cache key, or False to disable this warning. (Background on this error at: https://sqlalche.me/e/14/cprf)
[2023-05-05 01:28:44,733] {taskinstance.py:1426} INFO - Exporting the following env vars:
AIRFLOW_CTX_DAG_EMAIL=***@example.com
AIRFLOW_CTX_DAG_OWNER=***
AIRFLOW_CTX_DAG_ID=postgres_pipeline
AIRFLOW_CTX_TASK_ID=populate_customers_orders_table
AIRFLOW_CTX_EXECUTION_DATE=2023-05-05T01:28:32.799438+00:00
AIRFLOW_CTX_DAG_RUN_ID=manual__2023-05-05T01:28:32.799438+00:00
[2023-05-05 01:28:44,751] {base.py:79} INFO - Using connection to: id: postgres_local. Host: host.docker.internal, Port: 5432, Schema: sample_source_db, Login: ***, Password: ***, extra: {}
[2023-05-05 01:28:44,761] {sql.py:375} INFO - Running statement: 
    INSERT INTO customer_orders as 
    SELECT
        c.customerid, firstname, lastname, email,
        orderdate, totalamount, current_timestamp as load_ts
    FROM customers c
    INNER JOIN orders o
        ON c.customerid = o.customerid
    , parameters: None
[2023-05-05 01:28:44,762] {taskinstance.py:1700} ERROR - Task failed with exception
Traceback (most recent call last):
  File "/usr/local/lib/python3.7/site-packages/airflow/models/taskinstance.py", line 1329, in _run_raw_task
    self._execute_task_with_callbacks(context)
  File "/usr/local/lib/python3.7/site-packages/airflow/models/taskinstance.py", line 1455, in _execute_task_with_callbacks
    result = self._execute_task(context, self.task)
  File "/usr/local/lib/python3.7/site-packages/airflow/models/taskinstance.py", line 1511, in _execute_task
    result = execute_callable(context=context)
  File "/usr/local/lib/python3.7/site-packages/airflow/providers/postgres/operators/postgres.py", line 94, in execute
    self.hook.run(self.sql, self.autocommit, parameters=self.parameters)
  File "/usr/local/lib/python3.7/site-packages/airflow/providers/common/sql/hooks/sql.py", line 349, in run
    self._run_command(cur, sql_statement, parameters)
  File "/usr/local/lib/python3.7/site-packages/airflow/providers/common/sql/hooks/sql.py", line 380, in _run_command
    cur.execute(sql_statement)
psycopg2.errors.SyntaxError: syntax error at or near "SELECT"
LINE 3:     SELECT
            ^

[2023-05-05 01:28:44,780] {taskinstance.py:1277} INFO - Marking task as UP_FOR_RETRY. dag_id=postgres_pipeline, task_id=populate_customers_orders_table, execution_date=20230505T012832, start_date=20230505T012844, end_date=20230505T012844
[2023-05-05 01:28:44,790] {standard_task_runner.py:92} ERROR - Failed to execute job 95 for task populate_customers_orders_table
Traceback (most recent call last):
  File "/usr/local/lib/python3.7/site-packages/airflow/task/task_runner/standard_task_runner.py", line 85, in _start_by_fork
    args.func(args, dag=self.dag)
  File "/usr/local/lib/python3.7/site-packages/airflow/cli/cli_parser.py", line 48, in command
    return func(*args, **kwargs)
  File "/usr/local/lib/python3.7/site-packages/airflow/utils/cli.py", line 92, in wrapper
    return f(*args, **kwargs)
  File "/usr/local/lib/python3.7/site-packages/airflow/cli/commands/task_command.py", line 298, in task_run
    _run_task_by_selected_method(args, dag, ti)
  File "/usr/local/lib/python3.7/site-packages/airflow/cli/commands/task_command.py", line 107, in _run_task_by_selected_method
    _run_raw_task(args, ti)
  File "/usr/local/lib/python3.7/site-packages/airflow/cli/commands/task_command.py", line 184, in _run_raw_task
    error_file=args.error_file,
  File "/usr/local/lib/python3.7/site-packages/airflow/utils/session.py", line 70, in wrapper
    return func(*args, session=session, **kwargs)
  File "/usr/local/lib/python3.7/site-packages/airflow/models/taskinstance.py", line 1329, in _run_raw_task
    self._execute_task_with_callbacks(context)
  File "/usr/local/lib/python3.7/site-packages/airflow/models/taskinstance.py", line 1455, in _execute_task_with_callbacks
    result = self._execute_task(context, self.task)
  File "/usr/local/lib/python3.7/site-packages/airflow/models/taskinstance.py", line 1511, in _execute_task
    result = execute_callable(context=context)
  File "/usr/local/lib/python3.7/site-packages/airflow/providers/postgres/operators/postgres.py", line 94, in execute
    self.hook.run(self.sql, self.autocommit, parameters=self.parameters)
  File "/usr/local/lib/python3.7/site-packages/airflow/providers/common/sql/hooks/sql.py", line 349, in run
    self._run_command(cur, sql_statement, parameters)
  File "/usr/local/lib/python3.7/site-packages/airflow/providers/common/sql/hooks/sql.py", line 380, in _run_command
    cur.execute(sql_statement)
psycopg2.errors.SyntaxError: syntax error at or near "SELECT"
LINE 3:     SELECT
            ^

[2023-05-05 01:28:44,841] {local_task_job.py:154} INFO - Task exited with return code 1
[2023-05-05 01:28:44,885] {local_task_job.py:264} INFO - 0 downstream tasks scheduled from follow-on schedule check
[2023-05-05 01:28:44,887] {logging_mixin.py:109} WARNING - /usr/local/lib/python3.7/site-packages/***/models/dag.py:1076 SADeprecationWarning: Query.value() is deprecated and will be removed in a future release.  Please use Query.with_entities() in combination with Query.scalar() (deprecated since: 1.4)
[2023-05-05 01:28:44,888] {logging_mixin.py:109} WARNING - /usr/local/lib/python3.7/site-packages/***/models/dag.py:1076 SADeprecationWarning: Query.values() is deprecated and will be removed in a future release.  Please use Query.with_entities() (deprecated since: 1.4)
